--- a/main.html
+++ b/main.html
@@ -7,6 +7,18 @@
 </head>
 
 <body>
+	<form class="form">
+		<input type="text" id="name" placeholder="Name">
+		<input type="text" id="phone" placeholder="Phone Number">
+		<input type="text" id="address" placeholder="Address">
+		<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?"><span>Have you ever lived with a Dog before?</span>
+		<select multiple>
+			<option value="germen sheperd">germen sheperd</option>
+			<option value="poodle">poodle</option>
+			<option value="husky">husky</option>
+		</select>
+		<input type="submit" value="submit">
+	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
