--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 		<input type="text" id="phone" placeholder="Phone Number">
 		<input type="text" id="address" placeholder="Address">
 		<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?"><span>Have you ever lived with a Dog before?</span>
-		<select multiple>
+		<select id="multiSelect" multiple>
 			<option value="germen sheperd">germen sheperd</option>
 			<option value="poodle">poodle</option>
 			<option value="husky">husky</option>
