--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 			<option value="poodle">poodle</option>
 			<option value="husky">husky</option>
 		</select>
-		<input id="submit" type="submit" value="submit">
+		<input id="submit" type="submit" value="Submit">
 	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
